src/mds/Server.cc
@@ -2812,10 +2812,8 @@ CInode* Server::prepare_new_inode(MDRequestRef& mdr, CDir *dir, inodeno_t useino
 
   in->inode.uid = mdr->client_request->get_caller_uid();
 
-  in->inode.btime = in->inode.ctime = in->inode.mtime = in->inode.atime =
-    mdr->get_op_stamp();
-
-  in->inode.change_attr = 0;
+  in->inode.btime = in->inode.mtime = in->inode.atime = mdr->get_op_stamp();
+  in->inode.ctime = ceph_clock_now();
 
   const MClientRequest::const_ref &req = mdr->client_request;
   if (req->get_data().length()) {
@@ -4429,9 +4427,8 @@ void Server::handle_client_setattr(MDRequestRef& mdr)
   }
 
   pi.inode.version = cur->pre_dirty();
-  pi.inode.ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pi.inode.rstat.rctime)
-    pi.inode.rstat.rctime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.change_attr++;
 
   // log + wait
@@ -4467,9 +4464,9 @@ void Server::do_open_truncate(MDRequestRef& mdr, int cmode)
   // prepare
   auto &pi = in->project_inode();
   pi.inode.version = in->pre_dirty();
-  pi.inode.mtime = pi.inode.ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pi.inode.rstat.rctime)
-    pi.inode.rstat.rctime = mdr->get_op_stamp();
+  pi.inode.mtime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.change_attr++;
 
   uint64_t old_size = std::max<uint64_t>(pi.inode.size, mdr->client_request->head.args.open.old_size);
@@ -4585,9 +4582,8 @@ void Server::handle_client_setlayout(MDRequestRef& mdr)
   // add the old pool to the inode
   pi.inode.add_old_pool(old_layout.pool_id);
   pi.inode.version = cur->pre_dirty();
-  pi.inode.ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pi.inode.rstat.rctime)
-    pi.inode.rstat.rctime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.change_attr++;
   
   // log + wait
@@ -5026,9 +5022,8 @@ void Server::handle_set_vxattr(MDRequestRef& mdr, CInode *cur,
   }
 
   pip->change_attr++;
-  pip->ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pip->rstat.rctime)
-    pip->rstat.rctime = mdr->get_op_stamp();
+  pip->ctime = std::max(pip->ctime, ceph_clock_now());
+  pip->rstat.rctime = std::max(pip->rstat.rctime, pip->ctime);
   pip->version = cur->pre_dirty();
   if (cur->is_file())
     pip->update_backtrace();
@@ -5194,9 +5189,8 @@ void Server::handle_client_setxattr(MDRequestRef& mdr)
   // project update
   auto &pi = cur->project_inode(true);
   pi.inode.version = cur->pre_dirty();
-  pi.inode.ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pi.inode.rstat.rctime)
-    pi.inode.rstat.rctime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.change_attr++;
   pi.inode.xattr_version++;
   auto &px = *pi.xattrs;
@@ -5264,9 +5258,8 @@ void Server::handle_client_removexattr(MDRequestRef& mdr)
   auto &pi = cur->project_inode(true);
   auto &px = *pi.xattrs;
   pi.inode.version = cur->pre_dirty();
-  pi.inode.ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pi.inode.rstat.rctime)
-    pi.inode.rstat.rctime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.change_attr++;
   pi.inode.xattr_version++;
   px.erase(mempool::mds_co::string(name));
@@ -5668,9 +5661,8 @@ void Server::_link_local(MDRequestRef& mdr, CDentry *dn, CInode *targeti)
   // project inode update
   auto &pi = targeti->project_inode();
   pi.inode.nlink++;
-  pi.inode.ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pi.inode.rstat.rctime)
-    pi.inode.rstat.rctime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.change_attr++;
   pi.inode.version = tipv;
 
@@ -5977,7 +5969,8 @@ void Server::handle_slave_link_prep(MDRequestRef& mdr)
   encode(rollback, le->rollback);
   mdr->more()->rollback_bl = le->rollback;
 
-  pi.inode.ctime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.version = targeti->pre_dirty();
 
   dout(10) << " projected inode " << pi.inode.ino << " v " << pi.inode.version << dendl;
@@ -6451,9 +6444,8 @@ void Server::_unlink_local(MDRequestRef& mdr, CDentry *dn, CDentry *straydn)
     pi.inode.stray_prior_path = std::move(t);
   }
   pi.inode.version = in->pre_dirty();
-  pi.inode.ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pi.inode.rstat.rctime)
-    pi.inode.rstat.rctime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.change_attr++;
   pi.inode.nlink--;
   if (pi.inode.nlink == 0)
@@ -7742,17 +7734,15 @@ void Server::_rename_prepare(MDRequestRef& mdr,
 
   if (!silent) {
     if (spi) {
-      spi->ctime = mdr->get_op_stamp();
-      if (mdr->get_op_stamp() > spi->rstat.rctime)
-	spi->rstat.rctime = mdr->get_op_stamp();
+      spi->ctime = std::max(spi->ctime, ceph_clock_now());
+      spi->rstat.rctime = std::max(spi->rstat.rctime, spi->ctime);
       spi->change_attr++;
       if (linkmerge)
 	spi->nlink--;
     }
     if (tpi) {
-      tpi->ctime = mdr->get_op_stamp();
-      if (mdr->get_op_stamp() > tpi->rstat.rctime)
-	tpi->rstat.rctime = mdr->get_op_stamp();
+      tpi->ctime = std::max(tpi->ctime, ceph_clock_now());
+      tpi->rstat.rctime = std::max(tpi->rstat.rctime, tpi->ctime);
       tpi->change_attr++;
       {
         std::string t;
@@ -9331,9 +9321,8 @@ void Server::handle_client_mksnap(MDRequestRef& mdr)
   info.stamp = mdr->get_op_stamp();
 
   auto &pi = diri->project_inode(false, true);
-  pi.inode.ctime = info.stamp;
-  if (info.stamp > pi.inode.rstat.rctime)
-    pi.inode.rstat.rctime = info.stamp;
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.rstat.rsnaps++;
   pi.inode.version = diri->pre_dirty();
 
@@ -9471,9 +9460,8 @@ void Server::handle_client_rmsnap(MDRequestRef& mdr)
   // journal
   auto &pi = diri->project_inode(false, true);
   pi.inode.version = diri->pre_dirty();
-  pi.inode.ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pi.inode.rstat.rctime)
-    pi.inode.rstat.rctime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.rstat.rsnaps--;
   
   mdr->ls = mdlog->get_current_segment();
@@ -9618,9 +9606,8 @@ void Server::handle_client_renamesnap(MDRequestRef& mdr)
 
   // journal
   auto &pi = diri->project_inode(false, true);
-  pi.inode.ctime = mdr->get_op_stamp();
-  if (mdr->get_op_stamp() > pi.inode.rstat.rctime)
-     pi.inode.rstat.rctime = mdr->get_op_stamp();
+  pi.inode.ctime = std::max(pi.inode.ctime, ceph_clock_now()); /* don't go backwards! */
+  pi.inode.rstat.rctime = std::max(pi.inode.rstat.rctime, pi.inode.ctime); /* don't go backwards! */
   pi.inode.version = diri->pre_dirty();
 
   // project the snaprealm
